--- a/chatbot_new/static/css/QAchat_style.css
+++ b/chatbot_new/static/css/QAchat_style.css
@@ -374,7 +374,7 @@ ul li{
   width: 100%;
   position: relative;
   background:  #307278;
-  border-radius: .4em;
+  border-radius: 1em;
   margin-top:40px;
   margin-bottom:40px;
   font-size: 20px;
