--- a/chatbot_new/templates/chatbot_QA.html
+++ b/chatbot_new/templates/chatbot_QA.html
@@ -81,5 +81,5 @@
   </body>
 </html>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="{{ url_for('static', filename='js/expression_scripts_new.js') }}?v=1.2.0" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='js/QA_scripts.js') }}?v=1.2.0" type="text/javascript"></script>
 <script src="{{ url_for('static', filename='js/speech_input.js')}}" type="text/javascript"></script>
