--- a/chatbot_new/templates/chatbot_QA.html
+++ b/chatbot_new/templates/chatbot_QA.html
@@ -18,8 +18,9 @@
     
 </head>
 <body>
+    <div class="mode_background" id="mode_background"></div>
     <!-- 對話顯示 -->
-    <div class="talk_content" id="talk_content_id">	 
+    <div class="talk_content" id="talk_content_id" style="position:absolute;">	 
         <div class="info_content" id="info_content_id">  
           <div class="botsay" id="botsay">               
             <div class="dialog-bottom" >     哈囉!      </div>
