修改開場文字

--- a/chatbot_new/templates/chatbot_QA.html
+++ b/chatbot_new/templates/chatbot_QA.html
@@ -23,9 +23,9 @@
     <div class="talk_content" id="talk_content_id" style="position:absolute;">	 
         <div class="info_content" id="info_content_id">  
           <div class="botsay" id="botsay">               
-            <div class="dialog-bottom" >     哈囉!      </div>
+            <div class="dialog-bottom" >哈囉！<br>我是魚姊姊，請先告訴我你的班級唷！</div>
           </div>
-          <div class="head"><img id="fish" src="{{url_for('static', filename='image/expression/00.png')}}" ></img></div>
+          <div class="head"><img id="fish" src="{{url_for('static', filename='image/fishgirl.png')}}" ></img></div>
           
           <div class = "usersay" id="usersay" >               
             <div class="user local" > 
