--- a/chatbot_new/static/css/QAchat_style.css
+++ b/chatbot_new/static/css/QAchat_style.css
@@ -137,12 +137,40 @@ ul li{
   background-color: #ebebeb;
   border: none;
   border-radius: 10px;
-  border:#949494 1px solid;
+  /* border:#949494 1px solid; */
+  box-shadow: 2px 2px 5px gray;
   font-size: 20px;
 
 }
 .suggest_Btn:active {
   background-color: #d9d9d9;
+}
+
+/* 詢問頁數時的多選按鈕 */
+.suggest_Checkbox input[type="checkbox"] {
+  display: none; 
+}
+.suggest_Checkbox input:checked + .button {
+  background: #5e7380;
+  color: #fff;
+}
+.suggest_Checkbox .button {
+  display: inline-block;
+  margin: 5px 3px;
+  padding: 5px 10px;
+  width: 22px;
+  background: #ebebeb;
+  color: #000;
+  cursor: pointer; 
+  text-align: center;
+}
+.suggest_Checkbox .button:hover {
+  background: #bbb;
+  color: #fff; 
+}
+.suggest_Checkbox .round {
+  border-radius: 5px; 
+  box-shadow: 2px 2px 5px gray;
 }
 
 /*使用者任務提示*/
