--- a/chatbot_new/templates/chatbot_QA.html
+++ b/chatbot_new/templates/chatbot_QA.html
@@ -39,7 +39,7 @@
           <div class="talk_suggest" id="talk_suggest_id"></div>
           <div class="talk_taskHint" id="talk_taskHint_id"></div>
           <input type="text" class="talk_word speech_input " lang="zh-CN"  id="talkwords" onkeypress="user_inputPress()" autocomplete="off" >
-          <input type="button" value="傳送" class="talk_sendBtn" id="talksend" value = "" onclick="user_sendMsg(Object)">
+          <input type="button" value="傳送" class="talk_sendBtn" id="talksend" onclick="user_sendMsg(Object)">
         </div>
         <div class="talk_show" id="words" >
             
