--- a/chatbot_new/static/css/QAchat_style.css
+++ b/chatbot_new/static/css/QAchat_style.css
@@ -585,7 +585,9 @@
   bottom: -100px;
   z-index: 1;
 }
-
+.head:active {
+  filter: brightness(70%);
+}
 
 .dialog-bottom {
   width: 100%;
@@ -619,6 +621,26 @@
 .robotStyle {
   height: 75px;
 }
+
+.chatbotFile{
+  position: absolute;
+  width: 90%;
+  height: 70%;
+  background:#666666;
+  top: 10%;
+  left:5%;
+  border-radius: 20px;
+  display: none;
+  animation: fadeout 0.8s;
+  z-index: 7;
+}
+.closebtn{
+  position: relative;
+  height: 20px;
+  margin: 15px;
+  float: right;
+}
+
 html,
 body {
   height: 100%;
@@ -656,12 +678,6 @@ input[type=button], input[type=submit], input[type=file], button { cursor: point
  * See http://animista.net/license for more info. 
  * w: http://animista.net, t: @cssanimista
  * ---------------------------------------------- */
-
-/**
- * ----------------------------------------
- * animation slide-in-top
- * ----------------------------------------
- */
  @-webkit-keyframes slide-in-top {
   0% {
     -webkit-transform: translateY(-1000px);
@@ -686,5 +702,6 @@ input[type=button], input[type=submit], input[type=file], button { cursor: point
     opacity: 1;
   }
 }
+
 
 </style>
