--- a/chatbot_new/static/css/QAchat_style.css
+++ b/chatbot_new/static/css/QAchat_style.css
@@ -203,7 +203,7 @@
   z-index: 6;
 }
 
-.Example_4F{
+.Example_7type{
   width: 200%;
   position: relative;
   padding: 3px 8px;
@@ -217,7 +217,7 @@
 }
 
 
-.Example_4F ul li{
+.Example_7type ul li{
   position: relative;
   width: 90%;
   left: 20px;
@@ -689,19 +689,19 @@
 }
 .chatbotFile_head{
   position: relative;
-  height: 6%;
+  height: 12%;
   width: 70%;
   margin: 2.5%;
   float: left;
 }
 .chatbotFile_head input{
   position: relative;
-  height: 100%;
+  height: 40%;
   border: none;
   border-radius: 10px;
   background: #d7dee0;
-  font-size: 16px;
-  margin: 0 1%;
+  font-size: 12px;
+  margin: 1%;
   padding: 1% 3%;
 }
 .chatbotFile_botInfo{
@@ -709,7 +709,7 @@
   float: left;
   height: 8%;
   width: 91.5%;
-  margin: 1% 2.5%;
+  margin: 0 2.5%;
   background: white;
   color: #000;
   display: flex;
@@ -728,7 +728,7 @@
 }
 .chatbotFile_content{
   position: relative;
-  height: 70%;
+  height: 65%;
   width: 92%;
   margin: 2%;
   padding: 2%;
@@ -740,12 +740,12 @@
 .chatbotRecord_content{
   position: absolute;
   width: 96%;
-  height: 96%;
+  height: 94%;
   visibility: hidden;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
-.leaderboard_content{
+.testLeaderboard_content{
   position: absolute;
   width: 96%;
   height: 96%;
@@ -753,24 +753,24 @@
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
-.leaderboard_content table{
+.testLeaderboard_content table{
   width: 100%;
   border-collapse: collapse;
 }
-.leaderboard_content table,th,tr,td{
+.testLeaderboard_content table,th,tr,td{
   border-bottom: solid 1px #ffffff;
   padding: 5px;
 }
-.leaderboard_content .table-center{
+.testLeaderboard_content .table-center{
   text-align: center;
 }
-.leaderboard_content img{
+.testLeaderboard_content img{
   width: 60px;
 }
-.leaderboard_content .highlightBG{
+.testLeaderboard_content .highlightBG{
   background:#1c1c1c;
 }
-.leaderboard_content .Num{
+.testLeaderboard_content .Num{
   color: #9bb8ca;
   font-size: 40px;
   text-align: center;
@@ -782,7 +782,7 @@
   line-height: 2;
 }
 .chatbotRecord_content::-webkit-scrollbar { display: none; }
-.leaderboard_content::-webkit-scrollbar { display: none; }
+.testLeaderboard_content::-webkit-scrollbar { display: none; }
 .chatbotFile_QA{
   height: auto;
   width: 75%;
