--- a/chatbot_new/templates/chatbot_QA.html
+++ b/chatbot_new/templates/chatbot_QA.html
@@ -32,7 +32,7 @@
             <input type="image" class="closebtn"  src="{{url_for('static', filename='image/close.png')}}" onclick="cloceChatbotFile()">
             <input type="image" class="homeBtn" id="homeBtn_id" src="{{url_for('static', filename='image/home.png')}}" onclick="backToMainMenu()">
             <div class="chatbotFile_head">
-              <input type="button" class="trainRecordBtn" id="trainRecordBtn_id" value="訓練日誌" onclick="openTrainRecord()" style="background: #523b6e; color:white;">
+              <input type="button" class="trainRecordBtn" id="trainRecordBtn_id" value="訓練日誌" onclick="openTrainRecord()">
               <input type="button" class="trainLeaderboardBtn" id="trainLeaderboardBtn_id" value="訓練題數排行榜" onclick="openTrainLeaderboard()">
               <br>
               <input type="button" class="testRecordBtn" id="testRecordBtn_id" value="挑戰日誌" onclick="openTestRecord()">
