移動函式位子

--- a/chatbot_new/templates/chatbot_QA.html
+++ b/chatbot_new/templates/chatbot_QA.html
@@ -111,49 +111,56 @@
         <button class="Character_btn" onclick="display_guide(this)" value='Character'>人物</button><br>
         <div class="Example_7type Character" id="Character">
           <ul>
-            <li>人物範例句</li>
+            <li>Sophie是個什麼樣的人？</li>
+            <li>小驢子是懶惰不工作的嗎？</li>
           </ul>
         </div>
 
         <button class="Setting_btn" onclick="display_guide(this)" value='Setting'>時間地點</button><br>
         <div class="Example_7type Setting" id="Setting">
           <ul>
-            <li>時間地點範例句</li>
+            <li>Ralph什麼時候會還東西？</li>
+            <li>Mandy和Sophie去哪裡玩盪鞦韆？</li>
           </ul>
         </div>
 
         <button class="Action_btn" onclick="display_guide(this)" value='Action'>行為</button><br>
         <div class="Example_7type Action" id="Action">
           <ul>
-            <li>行為範例句</li>
+            <li>Salt對Sugar做了什麼事？</li>
+            <li>刺蝟在生日派對上收到哪些禮物？</li>
           </ul>
         </div>
 
         <button class="Feeling_btn" onclick="display_guide(this)" value='Feeling'>人物感受</button>
         <div class="Example_7type Feeling" id="Feeling">
           <ul>
-            <li>人物感受範例句</li>
+            <li>刺蝟喜歡猴子送給他的T恤嗎？</li>
+            <li>大家對Ralph借東西不還的行為感到如何？</li>
           </ul>
         </div>
 
         <button class="Causal_relations_btn" onclick="display_guide(this)" value='Causal_relations'>事情原因</button>
         <div class="Example_7type Causal_relations" id="Causal_relations">
           <ul>
-            <li>事情原因範例句</li>
+            <li>為什麼刺蝟沒穿小猴子送的衣服？</li>
+            <li>為什麼小驢子會被國王選中？</li>
           </ul>
         </div>
 
         <button class="Outcome_resolution_btn" onclick="display_guide(this)" value='Outcome_resolution'>事情結果</button>
         <div class="Example_7type Outcome_resolution" id="Outcome_resolution">
           <ul>
-            <li>事情結果範例句</li>
+            <li>當老Adam把Salt放進滾燙的熱水後，發生了什麼事？</li>
+            <li>Mandy將蛋糕送給Sophie後，他們和好了嗎？</li>
           </ul>
         </div>
         
         <button class="Prediction_btn" onclick="display_guide(this)" value='Prediction'>故事延伸</button>
         <div class="Example_7type Prediction" id="Prediction">
           <ul>
-            <li>故事延伸範例句</li>
+            <li>什麼禮物才是好禮物？</li>
+            <li>如果小驢子沒有被國王帶走，農夫會讓小驢子工作嗎？</li>
           </ul>
         </div>
         <div class="guide_robot" id="guide_robot_id"><img id="fish" src="{{url_for('static', filename='image/fishgirl.png')}}" ></img>魚姊姊</div>
